further updates & package fundamentals

--- a/R/notebook.qmd
+++ b/R/notebook.qmd
@@ -11,44 +11,34 @@ output: html_notebook
 
 ```{r}
 
+source("classes.R")
+source("helpers.R")
+source("models.R")
+source("group_lars.R")
+source("group_lasso.R")
+source("testing.R")
 
-# number of variables
-p <- 15
-n <- 50
-
-source("R/models.R")
-source("R/group_lars.R")
-source("R/group_lasso.R")
 
 ```
 
-
-```{r}
-
-box::use(
-    pracma[gramSchmidt]
-)
-
-model4 <- create_model1(n = 100)
-X <- model4$X
-X <- gramSchmidt(X)$Q # X <- scale(X)
-y <- model4$Y
-groups <- model4$groups
-gl <- calc_group_lasso(X, y, groups)
-gl@betas
-```
 
 # LARS
 
 ```{r}
 
-model_data <- create_model2()
+model_data <- create_model1()
 X <- model_data$X
-X <- gramSchmidt(X)$Q # X <- scale(X)
 y <- model_data$Y
+true_betas <- model_data$betas
 groups <- model_data$groups
 calc_group_lars(X, y, groups)@betas
-calc_group_lasso(X, y, groups)@betas
+true_betas
+lars <- calc_group_lars(X, y, groups)
+lars@betas_path
+lars@Cp_path
+betas <- calc_group_lasso(X, y, groups)@betas
+betas
+
 library(gglasso)
 gr_cv <- cv.gglasso(
     x = X, y = y, group = groups,
@@ -64,10 +54,43 @@ gr <- gglasso(X, y,
 
 
 as.numeric(gr$beta) |> round(5)
+calculate_me(X, gr$beta, true_betas)
+calculate_me(X, lars@betas_path[[9]], true_betas)
+r2(X %*% lars@betas, y)
 
+ols_name <- "OLS"
+step_name <- "Step regression"
+lars_gr_cp_name <- "Lars group Cp"
+lars_gr_me_name <- "Lars group ME"
+lasso_ext_name <- "Lasso group external"
+lasso_gr_me_name <- "Lasso group ME"
+lasso_gr_cp_name <- "Lasso group Cp"
+lars_cp_name <- "Lars Cp"
+lars_me_name <- "Lars ME"
 
+create_model <- create_model1
+
+container <- new(
+    "test_container"
+)
+container <- container + calculate_test(ols_name, test_ls, n = 10, create_model)
+container <- container + calculate_test(step_name, test_step, n = 10, create_model)
+container <- container + calculate_test(lars_gr_cp_name, test_lars_group, n = 10, create_model, result_indicator = "cp")
+container <- container + calculate_test(lars_gr_me_name, test_lars_group, n = 10, create_model, result_indicator = "me")
+container <- container + calculate_test(lasso_ext_name, test_lasso_group_library, n = 10, create_model)
+container <- container + calculate_test(lasso_gr_me_name, test_lasso_group, n = 10, create_model, result_indicator = "me")
+container <- container + calculate_test(lasso_gr_cp_name, test_lasso_group, n = 10, create_model, result_indicator = "cp")
+container <- container + calculate_test(lars_cp_name, test_lars, n = 10, create_model, result_indicator = "cp")
+container <- container + calculate_test(lars_me_name, test_lars, n = 10, create_model, result_indicator = "me")
+
+create_table(container)
+create_boxplot(container, "model_error")
+create_boxplot(container, "n_factors")
+create_boxplot(container, "cpu_time")
+
+tests_rows <- c(lars_gr_cp_name, lasso_gr_cp_name)
+tests_cols <- c(lars_cp_name, step_name)
 ```
-
 
 # Non Negative Garrotte
 
@@ -173,7 +196,6 @@ calc_group_nng <- function(X, y, groups) {
             betas[[k]], betas_ls, Z, y,
             df_lars
         )
-        browser()
 
         if (Cp < Cp_min) {
             best_betas <- betas[[k]]
